--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
                 </div>
                 <div class="about-col-2">
                     <h1 class="sub-title">About me</h1>
-                    <p>I am a freelancer. I can provide good-quality artwork. I make graphite and charcoal drawing and I also make watercolor and acrylic color paintings. Now I completed more than 4 years of experience in this field and I participated in several competitions and I won some prestigious prizes also. If you want any kind of services related to art you can free to ask.</p>
+                    <p>I am a freelancer. I provide good-quality artwork. I am well worsed in graphite and charcoal drawing , watercolour and acrylic colour paintings. I have more than 4 years of experience in this field and I participated in several competitions and have won prizes. If you want any kind of services related to art you are free to ask.</p>
                     <div class="tab-titles">
                         <p class="tab-links active-link" onclick="opentab('skills')">Skills</p>
                         <p class="tab-links" onclick="opentab('experiance')">Experiance</p>
